--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -2,11 +2,14 @@
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
+      <tr> <td>09:00</td>  <td>Registration and Setup</td> </tr>
       <tr> <td>09:30</td>  <td>Automating tasks with the Unix shell</td> </tr>
       <tr> <td>11:00</td>  <td>Coffee</td> </tr>
+      <tr> <td>11:20</td>  <td>Automating tasks with the Unix shell continued</td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td>Building programs with Python</td> </tr>
+      <tr> <td>13:30</td>  <td>Version control with Git</td> </tr>
       <tr> <td>15:00</td>  <td>Coffee</td> </tr>
+      <tr> <td>15:20</td>  <td>Version control with Git continued</td> </tr>
       <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
@@ -14,12 +17,14 @@
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:30</td>  <td>Version control with Git</td> </tr>
+      <tr> <td>09:30</td>  <td>Building programs with Python</td> </tr>
       <tr> <td>11:00</td>  <td>Coffee</td> </tr>
+      <tr> <td>11:20</td>  <td>Building programs with Python continued</td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td>Managing data with SQL</td> </tr>
+      <tr> <td>13:30</td>  <td>Building programs with Python continued</td> </tr>
       <tr> <td>15:00</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>15:20</td>  <td>Managing data with SQL</td> </tr>
+      <tr> <td>16:45</td>  <td>Wrap-up</td> </tr>
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
   </div>
