--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -17,13 +17,14 @@
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:30</td>  <td>Building programs with Python</td> </tr>
+      <tr> <td>09:00</td>  <td>Effective code review and continuous integration practices</td> </tr>
+      <tr> <td>10:00</td>  <td>Building programs with Python </td> </tr>
       <tr> <td>11:00</td>  <td>Coffee</td> </tr>
-      <tr> <td>11:20</td>  <td>Building programs with Python continued</td> </tr>
+      <tr> <td>11:20</td>  <td>Building programs with Python (continued)</td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td>Building programs with Python continued</td> </tr>
+      <tr> <td>13:30</td>  <td>Building programs with Python (continued)</td> </tr>
       <tr> <td>15:00</td>  <td>Coffee</td> </tr>
-      <tr> <td>15:20</td>  <td>Managing data with SQL</td> </tr>
+      <tr> <td>15:20</td>  <td>Building programs with Python (continued)</td> </tr>
       <tr> <td>16:45</td>  <td>Wrap-up</td> </tr>
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
